# Mary-s-Backend

./: .gitignore  README.md  bootstrap_db.py  check_db.py  main.py  pyproject.toml  test_ai.py  test_ai2.py  test_api.py  test_direct.py  test_direct_ai.py  test_env.py  test_zhipu.py
app/agents/: consultation_agent.py  health_agent.py  medical_agent.py  medication_agent.py  router.py
app/database/: connection.py
app/models/: __init__.py  consultation.py  medical.py  medication.py  profile.py
app/routers/: agent.py  consultation.py  diary.py  medical.py  medication.py  profile.py
app/schemas/: consultation.py  medical.py  medication.py  profile.py
app/services/: ai_agent.py  ocr_service.py
app/tools/: medical_tools.py
