[project]
name = "medical-rag-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.2",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.51",
    "python-dotenv>=1.2.2",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "openai>=1.0.0",
    "PyPDF2>=3.0.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
]